Fix согласование полей моделей бэка и мобилы.
